janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__call_is_not_a_definition.snap
---
source: src/analysis/definitions/tests.rs
expression: "(def pi 3)\n(print 1)"
---
----- SOURCE CODE
(def pi 3)
(print 1)

----- DEFINITIONS
def pi
