janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__definition_in_a_comment_form.snap
---
source: src/analysis/definitions/tests.rs
expression: (comment (var n 0))
---
----- SOURCE CODE
(comment (var n 0))

----- DEFINITIONS
var n
