janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__definition_in_a_declare_block.snap
---
source: src/analysis/definitions/tests.rs
expression: "(comment :declare (defn host [x]))"
---
----- SOURCE CODE
(comment :declare (defn host [x]))

----- DEFINITIONS
defn host [x]
