janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__definition_in_a_function_body.snap
---
source: src/analysis/definitions/tests.rs
expression: "(def pi 3)\n(defn- area [r] (def sq (* r r)) (* pi sq))"
---
----- SOURCE CODE
(def pi 3)
(defn- area [r] (def sq (* r r)) (* pi sq))

----- DEFINITIONS
def pi
defn- area [r] (private)
  def sq
