janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__definitions_in_other_forms_are_not_the_modules.snap
---
source: src/analysis/definitions/tests.rs
expression: "(do (def a 1))\n(when true (def b 2))\n(let [x 1] (def c 3))\n'(def d 4)\n(quote (def e 5))"
---
----- SOURCE CODE
(do (def a 1))
(when true (def b 2))
(let [x 1] (def c 3))
'(def d 4)
(quote (def e 5))

----- DEFINITIONS
