janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__definitions_in_upscopes_are_the_modules.snap
---
source: src/analysis/definitions/tests.rs
expression: "(upscope (def a 1))\n(compwhen true (def b 2))\n(compif false (def c 3) (upscope (def d 4)))"
---
----- SOURCE CODE
(upscope (def a 1))
(compwhen true (def b 2))
(compif false (def c 3) (upscope (def d 4)))

----- DEFINITIONS
def a
def b
def c
def d
