janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__destructuring_definition.snap
---
source: src/analysis/definitions/tests.rs
expression: "(def [a b] [1 2])"
---
----- SOURCE CODE
(def [a b] [1 2])

----- DEFINITIONS
def a
def b
