janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__docstring_with_escapes_before_metadata.snap
---
source: src/analysis/definitions/tests.rs
expression: "(defn- area \"Area of \\\"s\\\".\" :tag [shape & more] 1)"
---
----- SOURCE CODE
(defn- area "Area of \"s\"." :tag [shape & more] 1)

----- DEFINITIONS
defn- area [shape & more] (private)
  doc: "Area of \"s\"."
