janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__library_macro_is_not_a_definition.snap
---
source: src/analysis/definitions/tests.rs
expression: "(db/defentity User {:id :int})\n(defn f [x] (default x 1) x)"
---
----- SOURCE CODE
(db/defentity User {:id :int})
(defn f [x] (default x 1) x)

----- DEFINITIONS
defn f [x]
