janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__library_macro_read_as_a_core_definer.snap
---
source: src/analysis/definitions/tests.rs
expression: "show_definitions_as(\"(db/defentity User {:id :int})\\n(defthing make \\\"Makes.\\\" [x] (db/defentity Inner {}))\",\n&lint_as,)"
---
----- SOURCE CODE
(db/defentity User {:id :int})
(defthing make "Makes." [x] (db/defentity Inner {}))

----- DEFINITIONS
db/defentity User (private)
defthing make [x]
  doc: "Makes."
  db/defentity Inner (private)
