janet-check/src/analysis/definitions/snapshots/janet_check__analysis__definitions__tests__private_metadata.snap
---
source: src/analysis/definitions/tests.rs
expression: "(def pi :private \"Pi-ish.\" 3)"
---
----- SOURCE CODE
(def pi :private "Pi-ish." 3)

----- DEFINITIONS
def pi (private)
  doc: "Pi-ish."
